--- a/NimbleLoop.WebApp.Ui/wwwroot/css/src/style-input.css
+++ b/NimbleLoop.WebApp.Ui/wwwroot/css/src/style-input.css
@@ -1,1 +1,26 @@
 @import "tailwindcss";
+
+/* Import Roboto Variable Font */
+@font-face {
+  font-family: 'RobotoVariable';
+  src: url('/fonts/Roboto/Roboto-VariableFont_wdth,wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
+  font-stretch: 75% 100%;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'RobotoVariable';
+  src: url('/fonts/Roboto/Roboto-Italic-VariableFont_wdth,wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
+  font-stretch: 75% 100%;
+  font-style: italic;
+  font-display: swap;
+}
+
+@theme {
+  --font-sans: RobotoVariable, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+  --font-sans--font-feature-settings: normal;
+}
+
