--- a/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/_Imports.razor
+++ b/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using NimbleLoop.WebApp
 @using NimbleLoop.WebApp.Client
 @using NimbleLoop.WebApp.Components
+@using NimbleLoop.WebApp.Ui.Components.Layout
+@using NimbleLoop.WebApp.Ui.Utils
