--- a/NimbleLoop.WebApp.Ui/wwwroot/css/src/style-input.css
+++ b/NimbleLoop.WebApp.Ui/wwwroot/css/src/style-input.css
@@ -41,12 +41,12 @@
 	--color-warning: #f59e0b;
 	--color-warning-light: #fef3c7;
 	--color-warning-dark: #fbbf24;
-	--color-white: var(--color-foreground);
-	--color-black: var(--color-foreground-dark);
+	--color-white: var(--color-bg-light);
+	--color-black: var(--color-bg-dark);
 }
 @layer base {
 	body {
-		@apply h-screen w-screen max-w-screen bg-bg-light text-foreground dark:bg-bg-dark dark:text-foreground-dark;
+		@apply h-screen w-screen max-w-screen bg-white dark:bg-gray-900;
 	}
 }
 /* Blazor Error UI Styling */
