--- a/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/Pages/Home.razor
+++ b/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/Pages/Home.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Home - @Constants.COMPANY_NAME</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<HeroSection />
