Add FeaturedSection component to home page
Updated FeaturedSection.razor to highlight various features with a structured layout, including icons and descriptions. Added a new folder for home components in the project structure. Integrated the FeaturedSection component into Home.razor.

--- a/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/Pages/Home.razor
+++ b/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/Pages/Home.razor
@@ -1,5 +1,7 @@
 ﻿@page "/"
+@using NimbleLoop.WebApp.Ui.Components.Home
 
 <PageTitle>Home - @Constants.COMPANY_NAME</PageTitle>
 
 <HeroSection />
+<FeaturedSection />
