--- a/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/App.razor
+++ b/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/App.razor
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="@Assets["_content/NimbleLoop.WebApp.Ui/css/dist/style.css"]" />
   <link rel="stylesheet" href="@Assets["NimbleLoop.WebApp.styles.css"]" />
   <ImportMap />
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="_content/NimbleLoop.WebApp.Ui/assets/emblem.png" />
   <HeadOutlet />
 </head>
 
