--- a/NimbleLoop.WebApp.Ui/Components/Layout/HeroSection.razor
+++ b/NimbleLoop.WebApp.Ui/Components/Layout/HeroSection.razor
@@ -17,7 +17,7 @@
     <div class="mx-auto max-w-7xl px-6 pt-36 pb-32 sm:pt-60 lg:px-8 lg:pt-32">
       <div class="mx-auto max-w-2xl gap-x-14 lg:mx-0 lg:flex lg:max-w-none lg:items-center">
         <div class="relative w-full lg:max-w-xl lg:shrink-0 xl:max-w-2xl">
-          <h1 class="text-5xl font-semibold tracking-tight text-pretty text-primary sm:text-7xl dark:text-primary-dark">We’re changing the way people connect</h1>
+          <h1 class="heading-primary text-5xl font-semibold tracking-tight text-pretty sm:text-7xl">We’re changing the way people connect</h1>
           <p class="mt-8 text-lg font-medium text-pretty text-gray-500 sm:text-xl/8 sm:max-w-md lg:max-w-none dark:text-gray-400">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua. Anim aute id magna aliqua ad ad non deserunt sunt.</p>
           <div class="mt-10 flex items-center gap-x-6">
             <a href="#" class="btn-secondary">Get started</a>
