--- a/NimbleLoop.WebApp.Ui/Components/Home/OurStackSection.razor
+++ b/NimbleLoop.WebApp.Ui/Components/Home/OurStackSection.razor
@@ -1,7 +1,7 @@
 ﻿<div class="bg-white py-24 sm:py-32 dark:bg-gray-900">
   <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
-    <h2 class="text-base/7 font-semibold text-indigo-600 dark:text-indigo-400">Our stack</h2>
-    <p class="mt-2 max-w-lg text-4xl font-semibold tracking-tight text-pretty text-gray-950 sm:text-5xl dark:text-white">Tools we use to build your app</p>
+    <h2 class="section-heading-secondary">Our stack</h2>
+    <p class="heading-primary mt-2 max-w-lg text-4xl font-semibold tracking-tight text-pretty sm:text-5xl">Tools we use to build your app</p>
     <div class="mt-10 grid grid-cols-1 gap-4 sm:mt-16 lg:grid-cols-6 lg:grid-rows-2">
       <div class="relative lg:col-span-3">
         <div class="absolute inset-0 rounded-lg bg-white max-lg:rounded-t-4xl lg:rounded-tl-4xl dark:bg-gray-800"></div>
@@ -9,7 +9,7 @@
           <img src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-performance.png" alt="" class="h-80 object-cover object-left dark:hidden" />
           <img src="https://tailwindcss.com/plus-assets/img/component-images/dark-bento-01-performance.png" alt="" class="h-80 object-cover object-left not-dark:hidden" />
           <div class="p-10 pt-4">
-            <h3 class="text-sm/4 font-semibold text-indigo-600 dark:text-indigo-400">Performance</h3>
+            <h3 class="text-sm/4 font-semibold text-primary dark:text-primary-dark">Performance</h3>
             <p class="mt-2 text-lg font-medium tracking-tight text-gray-950 dark:text-white">Lightning-fast builds</p>
             <p class="text-sm/6 mt-2 max-w-lg text-gray-600 dark:text-gray-400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In gravida justo et nulla efficitur, maximus egestas sem pellentesque.</p>
           </div>
@@ -22,7 +22,7 @@
           <img src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-releases.png" alt="" class="h-80 object-cover object-left lg:object-right dark:hidden" />
           <img src="https://tailwindcss.com/plus-assets/img/component-images/dark-bento-01-releases.png" alt="" class="h-80 object-cover object-left not-dark:hidden lg:object-right" />
           <div class="p-10 pt-4">
-            <h3 class="text-sm/4 font-semibold text-indigo-600 dark:text-indigo-400">Releases</h3>
+            <h3 class="text-sm/4 font-semibold text-primary dark:text-primary-dark">Releases</h3>
             <p class="mt-2 text-lg font-medium tracking-tight text-gray-950 dark:text-white">Push to deploy</p>
             <p class="text-sm/6 mt-2 max-w-lg text-gray-600 dark:text-gray-400">Curabitur auctor, ex quis auctor venenatis, eros arcu rhoncus massa, laoreet dapibus ex elit vitae odio.</p>
           </div>
@@ -35,7 +35,7 @@
           <img src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-speed.png" alt="" class="h-80 object-cover object-left dark:hidden" />
           <img src="https://tailwindcss.com/plus-assets/img/component-images/dark-bento-01-speed.png" alt="" class="h-80 object-cover object-left not-dark:hidden" />
           <div class="p-10 pt-4">
-            <h3 class="text-sm/4 font-semibold text-indigo-600 dark:text-indigo-400">Speed</h3>
+            <h3 class="text-sm/4 font-semibold text-primary dark:text-primary-dark">Speed</h3>
             <p class="mt-2 text-lg font-medium tracking-tight text-gray-950 dark:text-white">Built for power users</p>
             <p class="text-sm/6 mt-2 max-w-lg text-gray-600 dark:text-gray-400">Sed congue eros non finibus molestie. Vestibulum euismod augue.</p>
           </div>
@@ -48,7 +48,7 @@
           <img src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-integrations.png" alt="" class="h-80 object-cover dark:hidden" />
           <img src="https://tailwindcss.com/plus-assets/img/component-images/dark-bento-01-integrations.png" alt="" class="h-80 object-cover not-dark:hidden" />
           <div class="p-10 pt-4">
-            <h3 class="text-sm/4 font-semibold text-indigo-600 dark:text-indigo-400">Integrations</h3>
+            <h3 class="text-sm/4 font-semibold text-primary dark:text-primary-dark">Integrations</h3>
             <p class="mt-2 text-lg font-medium tracking-tight text-gray-950 dark:text-white">Connect your favorite tools</p>
             <p class="text-sm/6 mt-2 max-w-lg text-gray-600 dark:text-gray-400">Maecenas at augue sed elit dictum vulputate, in nisi aliquam maximus arcu.</p>
           </div>
@@ -61,7 +61,7 @@
           <img src="https://tailwindcss.com/plus-assets/img/component-images/bento-01-network.png" alt="" class="h-80 object-cover dark:hidden" />
           <img src="https://tailwindcss.com/plus-assets/img/component-images/dark-bento-01-network.png" alt="" class="h-80 object-cover not-dark:hidden" />
           <div class="p-10 pt-4">
-            <h3 class="text-sm/4 font-semibold text-indigo-600 dark:text-indigo-400">Network</h3>
+            <h3 class="text-sm/4 font-semibold text-primary dark:text-primary-dark">Network</h3>
             <p class="mt-2 text-lg font-medium tracking-tight text-gray-950 dark:text-white">Globally distributed CDN</p>
             <p class="text-sm/6 mt-2 max-w-lg text-gray-600 dark:text-gray-400">Aenean vulputate justo commodo auctor vehicula in malesuada semper.</p>
           </div>
