--- a/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/App.razor
+++ b/NimbleLoop.WebApp/NimbleLoop.WebApp/Components/App.razor
@@ -1,21 +1,21 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-white scheme-light dark:bg-gray-950 dark:scheme-dark">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
-    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
-    <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["NimbleLoop.WebApp.styles.css"]" />
-    <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <base href="/" />
+  <link rel="stylesheet" href="@Assets["_content/NimbleLoop.WebApp.Ui/css/dist/style.css"]" />
+  <link rel="stylesheet" href="@Assets["NimbleLoop.WebApp.styles.css"]" />
+  <ImportMap />
+  <link rel="icon" type="image/png" href="_content/NimbleLoop.WebApp.Ui/assets/emblem.png" />
+  <HeadOutlet />
 </head>
 
 <body>
-    <Routes />
-    <script src="_framework/blazor.web.js"></script>
+  <Routes />
+  <script src="_framework/blazor.web.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@@tailwindplus/elements@1" type="module"></script>
 </body>
 
 </html>
